--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0.0",
         "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~2.12"
+        "friendsofphp/php-cs-fixer": "~2.12",
+        "phpstan/phpstan": "^1.9"
     },
     "autoload": {
         "psr-4": { 
